# quant

./: .gitattributes  .gitignore  COVERAGE_frameworks.md  DEPLOY.md  PLAN.md  README.md  REVIEW_panel_2026-06-21.md  mkdocs.guide.yml  mkdocs.survey.yml  pyproject.toml
.github/workflows/: deploy.yml
guide/: OUTLINE.md  ch0F_金融市场与工具基础.md  index.md
guide/code/: smoke_baseline_libs.py
guide/code/ch0F/: finance_basics.py
home/: index.html
overrides/partials/languages/: custom.html
survey/: 00_导读.md  OUTLINE.md  index.md  references.md
survey/code/: fig00_diagrams.py
survey/js/: mathjax.js
