[project]
name = "quant-study"
version = "0.1.0"
description = "独立量化学习环境：综述 + d2l 风格教学指南的可运行代码"
requires-python = ">=3.11,<3.13"
# 核心依赖：轻量、Windows 上有可靠 wheel、安装快，覆盖前 5 章（数据/组合/因子/回测/传统ML）
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "akshare>=1.12",        # A股免费数据
    "yfinance>=0.2.40",     # 美股/全球数据
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "tqdm>=4.66",
    "ipykernel>=6.29",      # 便于 notebook / 交互式执行
]

# 重/可选依赖，按里程碑分组安装： uv sync --group dl  等
[dependency-groups]
backtest = [
    "backtrader>=1.9",          # 纯 Python 回测，安装稳
    "vectorbt>=0.26",           # 向量化回测；实测 0.28.2 兼容 numpy2.4/pandas3（2026-06-22 冒烟）
    # alphalens-reloaded 已移除：与 pandas3 不兼容（empyrical→pandas_datareader 撞 deprecate_kwarg；
    #   升级最新 pdr 0.10 仍崩，该库 2021 停更）。替代：因子评估用 qlib.contrib.eva.alpha + 从零实现；
    #   绩效用 quantstats / vbt.Portfolio.stats()。详见 PLAN §4.2。如确需 alphalens 须另开 pandas<3 隔离环境。
    "quantstats>=0.0.81",       # 组合绩效分析（夏普/回撤/月度）；实测兼容 numpy2.4/pandas3
]
dl = [
    "torch>=2.2",               # 深度学习（体积较大）
]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    # "finrl"  # 需要时再加，依赖较重，按官方文档安装
]
nlp = [
    "transformers>=4.40",
    "datasets>=2.19",
]
qlib = [
    "pyqlib>=0.9.5",            # Microsoft Qlib；实测 0.9.7 import 兼容 numpy2.4/pandas3（依赖重 169 包，深度工作流待 ch06 实跑）
]
data = [
    # 数据处理可选加速层（实测 polars 1.41.2 兼容 numpy2.4/pandas3，与 pandas 双向互转 OK）。
    # 定位：大数据/特征工程用 polars 提速，下游喂 qlib/vbt/sklearn 时 .to_pandas()。vnpy alpha 扩展亦用 polars。
    "polars>=1.4",
    "pyarrow>=15",
]
docs = [
    "mkdocs-material>=9.5",     # 文档站（含 mkdocs + pymdown-extensions）
    "jieba>=0.42",             # 中文搜索分词（Material 检测到 jieba 即启用）
]

[tool.uv]
package = false                # 仅作为虚拟环境/脚本管理，不构建 quant-study 自身
